--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tryghost/helpers": "1.1.27",
     "@tryghost/helpers-gatsby": "1.0.31",
     "cheerio": "1.0.0-rc.3",
+    "core-js": "^3.6.5",
     "gatsby": "2.21.12",
     "gatsby-awesome-pagination": "0.3.5",
     "gatsby-image": "2.4.1",
@@ -57,6 +58,7 @@
     "lodash": "4.17.15",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-helmet": "5.2.1"
+    "react-helmet": "5.2.1",
+    "styled-components": "^5.1.1"
   }
 }
