--- a/package.json
+++ b/package.json
@@ -32,33 +32,35 @@
   },
   "devDependencies": {
     "babel-eslint": "10.1.0",
-    "eslint": "6.8.0",
-    "eslint-plugin-ghost": "1.3.0",
-    "eslint-plugin-react": "7.19.0"
+    "eslint": "7.7.0",
+    "eslint-plugin-ghost": "1.5.0",
+    "eslint-plugin-react": "7.20.6"
   },
   "dependencies": {
-    "@tryghost/helpers": "1.1.27",
-    "@tryghost/helpers-gatsby": "1.0.31",
+    "@tryghost/helpers": "1.1.30",
+    "@tryghost/helpers-gatsby": "1.0.34",
     "cheerio": "1.0.0-rc.3",
     "core-js": "^3.6.5",
-    "gatsby": "2.21.12",
-    "gatsby-awesome-pagination": "0.3.5",
-    "gatsby-image": "2.4.1",
-    "gatsby-plugin-advanced-sitemap": "1.5.4",
-    "gatsby-plugin-catch-links": "2.3.1",
-    "gatsby-plugin-feed": "2.5.1",
+    "gatsby": "2.24.47",
+    "gatsby-awesome-pagination": "0.3.6",
+    "gatsby-image": "2.4.16",
+    "gatsby-plugin-advanced-sitemap": "1.5.5",
+    "gatsby-plugin-catch-links": "2.3.11",
+    "gatsby-plugin-feed": "2.5.11",
     "gatsby-plugin-force-trailing-slashes": "1.0.4",
-    "gatsby-plugin-manifest": "2.4.2",
-    "gatsby-plugin-offline": "3.2.1",
-    "gatsby-plugin-react-helmet": "3.3.1",
-    "gatsby-plugin-sharp": "2.6.1",
-    "gatsby-source-filesystem": "2.3.1",
-    "gatsby-source-ghost": "4.0.4",
-    "gatsby-transformer-sharp": "2.5.1",
-    "lodash": "4.17.15",
+    "gatsby-plugin-manifest": "2.4.23",
+    "gatsby-plugin-offline": "3.2.23",
+    "gatsby-plugin-react-helmet": "3.3.10",
+    "gatsby-plugin-sharp": "2.6.27",
+    "gatsby-plugin-styled-components": "^3.3.10",
+    "gatsby-source-filesystem": "2.3.24",
+    "gatsby-source-ghost": "4.0.5",
+    "gatsby-transformer-sharp": "2.5.13",
+    "lodash": "4.17.20",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-helmet": "5.2.1",
+    "react-helmet": "6.1.0",
+    "sharp": "0.25.4",
     "styled-components": "^5.1.1"
   }
 }
